# auto-scheduling-system

./: .gitignore  .tmp_dashboard_unicode_probe.txt  README.md  docker-compose.prod.yml  docker-compose.yml
services/api/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260320_0001_baseline_schema.py  20260320_0002_add_bom_relation_compound_indexes.py  20260320_0003_add_order_schedule_snapshot.py  20260321_0004_add_bom_backfill_queue.py  20260322_0005_extend_order_schedule_snapshot_sales_fields.py  20260323_0006_add_snapshot_query_indexes.py  20260323_0007_add_recursive_part_schedule_fields.py  20260323_0008_add_admin_session_and_sync_job_recovery.py  20260323_0009_hash_admin_session_tokens.py  20260323_0010_add_user_identity_tables.py  20260325_0011_extend_user_roles_and_permissions.py  20260325_0012_add_background_task_runtime.py  20260326_0013_add_snapshot_plant.py  20260326_0014_add_pg_trgm_search_indexes.py  20260326_0015_extend_part_cycle_baseline.py  (+2 more)
services/api/app/: config.py  database.py  main.py  openapi.py  sync_scheduler.py
services/api/docker/: backend-entrypoint.sh  scheduler-entrypoint.sh  worker-entrypoint.sh
services/api/docs/: 2026-03-19-autoschedule-p0-pn-checklist.md  2026-03-19-autoschedule-project-overview.md  2026-03-20-real-order-closed-loop-validation.md  cookie-session-curl-examples-2026-03-23.md  cookie-session-postman-guide-2026-03-23.md  database-migration-guide.md  frontend-dev-prompt.md  openapi.json  worker-scheduler-snapshot-运维说明-2026-03-26.md  外部接口配置填写说明-2026-03-18.md  真实联调操作清单-2026-03-18.md
services/api/scripts/: backfill_bom_levels.py  backfill_dirty_text_data.py  init_work_calendar.py  prewarm_snapshots.py  run_sync_scheduler.py  run_sync_worker.py  validate_postgres_runtime.py  wait_for_db.py
services/api/tests/: conftest.py  test_health.py
(+353 files in other folders)
